[gd_scene load_steps=6 format=2]

[ext_resource path="res://SettingsBar/SettingsBar.gd" type="Script" id=1]
[ext_resource path="res://GUI/button_fullscreen_expand.png" type="Texture" id=2]
[ext_resource path="res://GUI/button_sound_on.png" type="Texture" id=3]
[ext_resource path="res://GUI/button_fullscreen_shrink.png" type="Texture" id=4]
[ext_resource path="res://GUI/button_sound_off.png" type="Texture" id=5]

[node name="SettingsBar" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 920.0
margin_top = 838.0
margin_right = 960.0
margin_bottom = 1033.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 80.0
margin_bottom = 235.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 80.0
margin_bottom = 235.0
custom_constants/separation = 75

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 80.0
margin_bottom = 80.0
alignment = 1

[node name="FullscreenButton" type="TextureButton" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 80.0
margin_bottom = 80.0
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
stretch_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 155.0
margin_right = 80.0
margin_bottom = 235.0
alignment = 1

[node name="MuteButton" type="TextureButton" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 80.0
margin_bottom = 80.0
toggle_mode = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
stretch_mode = 3

[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/FullscreenButton" to="." method="_on_FullscreenButton_pressed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/MuteButton" to="." method="_on_MuteButton_toggled"]
